feat: Input Validation has been implemented
